--- a/public/templates/pets/index.html
+++ b/public/templates/pets/index.html
@@ -1,3 +1,12 @@
 
 
 <h1>Pet Index page</h1>
+
+<ul>
+  <li ng-repeat="pet in petsIndex.all" ui-sref="petsShow({ id: pet._id})">
+    {{ pet.name }}
+  </li>  
+
+</ul>
+
+<button ui-sref="petsNew">Add</button>
