--- a/public/templates/pets/show.html
+++ b/public/templates/pets/show.html
@@ -2,5 +2,5 @@
 
 <h1>{{ petsShow.selected.name }}</h1>
 
-<button ui-sref="petsEdit{{ id: petsShow.selected._id })">Edit</button> 
+<!-- <button ui-sref="petsEdit{{ id: petsShow.selected._id })">Edit</button>  -->
 
