--- a/public/templates/reviews/index.html
+++ b/public/templates/reviews/index.html
@@ -1,11 +1,12 @@
 
+<div class="container">
+  <h1>Review Index</h1>
 
-<h1>Review Index</h1>
+  <ul>
+    <li ng-repeat="review in reviewsIndex.all" ui-sref="reviewsShow({ id: review._id })">
+      {{ review.name }}
+    </li>  
+  </ul>
 
-<ul>
-  <li ng-repeat="Review in reviewsIndex.all" ui-sref="reviewsShow({ id: review._id })">
-    {{ review.name }}
-  </li>  
-</ul>
-
-<button ui-sref="reviewsNew">Add</button>
+  <button ui-sref="reviewsNew">Add</button>
+</div>  
