--- a/public/templates/pets/new.html
+++ b/public/templates/pets/new.html
@@ -1,22 +1,24 @@
 
-<h3>Pets new page</h3>
 
-<form ng-submit="petsNew.create()">
-  <div class="form-group"> 
-    <input type="text" name="name" ng-model="petsNew.new.name" placeholder="Name">
+<div class="container">
+  <h3>Pets new page</h3>
 
-    <input type="text" name="breed" ng-model="petsNew.new.breed" placeholder="Breed">
+  <form ng-submit="petsNew.create()">
+    <div class="form-group"> 
+      <input type="text" name="name" ng-model="petsNew.new.name" placeholder="Name">
 
-    <input type="text" name="colour" ng-model="petsNew.new.colour" placeholder="Colour">
+      <input type="text" name="breed" ng-model="petsNew.new.breed" placeholder="Breed">
 
-    <input type="number" name="age" ng-model="petsNew.new.age" placeholder="Age">
+      <input type="text" name="colour" ng-model="petsNew.new.colour" placeholder="Colour">
 
-    <button>Save</button>
-    <button type="button" ui-sref="petsShow({ id: petsEdit.selected._id })">Cancel</button>
+      <input type="number" name="age" ng-model="petsNew.new.age" placeholder="Age">
 
-  </div>
-</form>  
+      <button>Save</button>
+      <button type="button" ui-sref="petsShow({ id: petsEdit.selected._id })">Cancel</button>
 
+    </div>
+  </form>  
+</div>
 
 
 
