google maps added

--- a/public/templates/reviews/new.html
+++ b/public/templates/reviews/new.html
@@ -11,6 +11,7 @@
         <input type="number" step="any" name="lng" ng-model="reviewsNew.new.lng" placeholder="Lng">
         <input type="number" name="rating" ng-model="reviewsNew.new.rating" placeholder="Rating">
         <input type="text" name="user" ng-model="reviewsNew.new.user" placeholder="User">
+        <input type="text" name="image" ng-model="reviewsNew.new.image" placeholder="Image">
       <button>Save</button>
       <button type="button" ui-sref="reviewsShow({ id: reviewsEdit.selected._id })">Cancel</button>
 
