--- a/public/templates/reviews/edit.html
+++ b/public/templates/reviews/edit.html
@@ -12,6 +12,7 @@
       <input type="number" step="any" name="lng" ng-model="reviewsEdit.selected.lng" placeholder="Lng">
       <input type="number" name="rating" ng-model="reviewsEdit.selected.rating" placeholder="Rating">
       <input type="text" name="user" ng-model="reviewsEdit.selected.user" placeholder="User">
+      <input type="text" name="image" ng-model="reviewsEdit.selected.image" placeholder="Image">
 
       <button>Update</button>
       <button type="button" ui-sref="reviewsShow({ id: reviewsEdit.selected._id })">Cancel</button>
