--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,45 @@ html, body {
 }
 
 .g-map {
-  height: 100vh;
-  width: 50%;
-  margin: 0 auto;
+  height: 50vh;
+  width: 80%;
+  margin: auto;
+
 }
 
-#map {
+.panel-group {
+  margin-top: 20px;
+}
+
+.panel-heading {
+  font-size: 25px;
+}
+
+.navbar {
+    position: relative;
+    height: 80px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+    border: 1px solid #D4D06A;
+    background-color: #FFFCAA;
+}
+
+.showImage {
+  margin-left: 300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*#map {
   height: 300px;
   margin: 50px auto;
-}
+}*/
