--- a/public/templates/reviews/new.html
+++ b/public/templates/reviews/new.html
@@ -1,24 +1,24 @@
 <div class="container">
-  <h1>Review new</h1>
-
+  
+<h1>Add a new Review</h1>
   <form ng-submit="reviewsNew.create()">
     <div class="form-group">
-      <input places-autocomplete type="text" name="name" ng-model="reviewsNew.new.name" placeholder="Name">
+      <input places-autocomplete type="text" class="form-control" name="name" ng-model="reviewsNew.new.name" placeholder="Name">
     </div>
     <div class="form-group">
-      <input type="text" name="address" ng-model="reviewsNew.new.address" placeholder="Address">
+      <input type="text" class="form-control" name="address" ng-model="reviewsNew.new.address" placeholder="Address">
     </div>
     <div class="form-group">
-      <textarea name="content" ng-model="reviewsNew.new.content" placeholder="Content"></textarea>
+      <textarea name="content" class="form-control" ng-model="reviewsNew.new.content" placeholder="Content"></textarea>
     </div>
     <div class="form-group">
-      <input type="number" name="rating" ng-model="reviewsNew.new.rating" placeholder="Rating">
+      <input type="number" class="form-control" name="rating" ng-model="reviewsNew.new.rating" placeholder="Rating out of 10">
     </div>
     <div class="form-group">
-      <input type="text" name="image" ng-model="reviewsNew.new.image" placeholder="Image">
+      <input type="text" class="form-control" name="image" ng-model="reviewsNew.new.image" placeholder="Image">
     </div>
 
-    <button>Save</button>
-    <button type="button" ui-sref="reviewsShow({ id: reviewsEdit.selected._id })">Cancel</button>
+    <button class="btn btn-info">Save</button>
+    <button class="btn btn-info" type="button" ui-sref="reviewsShow({ id: reviewsEdit.selected._id })">Cancel</button>
   </form>
 </div>
