--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,15 +1,23 @@
 
-<div class="container">
-  <h1>Login page</h1>
+<div class="container loginPage">
 
-  <form ng-submit="login.submit()">
-    <div class="form-group">
+<!--   <div class="well loginWell">
+    <h2>Login to Pet Friendly</h2> 
+  </div>
+ -->
+
+
+<h1 id="loginHead">Pet Friendly</h1>
+
+
+  <form class="formEmail" ng-submit="login.submit()">
+    <div class="form-group ">
       <input type="email" name="email" ng-model="login.credentials.email" placeholder="Email" class="form-control">
     </div>
     <div class="form-group">
       <input type="password" name="password" ng-model="login.credentials.password" placeholder="Password" class="form-control">
     </div>
-    <input type="submit" value="Submit" class="btn btn-primary">
+    <input id="submit" type="submit" value="Submit" class="btn btn-primary">
   </form>  
 </div>
 
