--- a/public/templates/users/index.html
+++ b/public/templates/users/index.html
@@ -1,19 +1,17 @@
-
-
-
 <div class="container">
 
     <h1>User Index page</h1>
-
-    <ul>
-      <li ng-repeat="user in usersIndex.all" ui-sref="usersShow({ id: user._id })">
-        {{ user.username }}
-        {{ user.pet_name }}
-      </li>  
-
-    </ul>
-
+  <div class="row">
+    <div class="col-sm-6 col-md-4" ng-repeat="user in usersIndex.all" ui-sref="usersShow({ id: user._id})">
+      <div class="thumbnail">
+        <img ng-src="images/hotel.png" alt="...">
+        <div class="caption">
+          <h3>Pet Name: {{ user.pet_name }}</h3>
+          <p>Username: {{ user.username }}</p>
+          <p>Email: {{ user.email }}</p>
+         <!--  <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
