--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -4,7 +4,7 @@
 
 <div class="homePage">
 
-  <h1 id="homeTitle"> Dog Friendly</h1>
+  <h1 id="homeTitle"> Paws Allowed</h1>
 
     <div id="welcomeDetail">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
