--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,7 +7,7 @@
  -->
 
 
-<h1 id="loginHead">Pet Friendly</h1>
+<h1 id="loginHead">Paws Allowed</h1>
 
 
   <form class="formEmail" ng-submit="login.submit()">
