--- a/public/templates/reviews/edit.html
+++ b/public/templates/reviews/edit.html
@@ -1,6 +1,6 @@
 
-<div class="container">
-  <h1>Edit your Review</h1>
+<div class="container reviewedit">
+  <h1 id="editHeading">Edit your Review</h1>
 
   <form ng-submit="reviewsEdit.save()">
     <div class="form-group">
