--- a/public/templates/reviews/edit.html
+++ b/public/templates/reviews/edit.html
@@ -24,8 +24,8 @@
       <input type="text" class="form-control" name="image" ng-model="reviewsEdit.selected.image" placeholder="Image">
     </div>
 
-    <button class="btn btn-info">Update review</button>
-    <button class="btn btn-info" type="button" ui-sref="reviewsShow({ id: reviewsEdit.selected._id })">Cancel review</button>
+    <button class="btn btn-info updatereview">Update review</button>
+    <button class="btn btn-info cancelreview" type="button" ui-sref="reviewsShow({ id: reviewsEdit.selected._id })">Cancel review</button>
   </form>
 </div>  
 
