--- a/public/templates/users/edit.html
+++ b/public/templates/users/edit.html
@@ -19,8 +19,8 @@
       <!-- <input type="text" class="form-control" name="image" ng-model="usersEdit.selected.image" placeholder="Profile Image"> -->
     </div>  
 
-       <button class="btn btn-info">Update</button>
-       <button class="btn btn-info" type="button" ui-sref="usersShow({ id: usersEdit.selected._id })">Cancel</button>
+       <button class="btn btn-info updatepro">Update</button>
+       <button class="btn btn-info cancelpro" type="button" ui-sref="usersShow({ id: usersEdit.selected._id })">Cancel</button>
 
      </div> 
    </form> 
