--- a/public/templates/users/index.html
+++ b/public/templates/users/index.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-4" ng-repeat="user in usersIndex.all" ui-sref="usersShow({ id: user._id})">
       <div class="thumbnail">
-        <img ng-src="http://67.media.tumblr.com/ea884efd16cdf361b79c51c80447cd8f/tumblr_nh7oj8VlLr1tvk4g1o1_500.jpg"
+        <img class="proimages" ng-src="http://67.media.tumblr.com/ea884efd16cdf361b79c51c80447cd8f/tumblr_nh7oj8VlLr1tvk4g1o1_500.jpg"
             >
           <div class="caption">
             <h3 id="petName">Dog Name: {{ user.pet_name }}</h3>
