font and colour changes

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -7,26 +7,20 @@
   <h1 id="homeTitle"> Paws Allowed</h1>
 
     <div id="welcomeDetail">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+        <p><strong id="openwords">Welcome</strong> to Paws Allowed, a site dedicated to providing you with loads of information about 
+        dog-friendly locations. It can be a real problem if your planning to visit somewhere in the 
+        country especially an area you don't know well and your not sure where you can take your dog, 
+        what restaurants, bars and beaches you could visit!</p> 
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>On this site you can browse through the many reviews that users have posted to find out 
+        potential visits. The reviews cover the British Isles and focus particulalry on dog-friendly 
+        beaches, restaurants and bar locations. </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>If you sign up as a registered user you can create, edit and post your own reviews providing useful 
+        helpful information to other dog owners. Share your thoughts and opinions on places where you've visited with your dog.</p> 
+        
+        <p>Paws Allowed is a great source of information from it's many users and their experiences. Hope
+        you find it a great resource in visiting dog-friendly places.</p> 
     </div>    
 
 </div>          
