--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,6 +111,8 @@ border-radius: 5px;
   background-image: url("/images/login_dog.jpg");
   background-size: auto 100%;
   background-repeat: no-repeat;
+  border-radius: 15px;
+  margin-top: 25px;
 }
 
 /*.loginWell { 
@@ -121,10 +123,12 @@ border-radius: 5px;
   margin-left: 160px;
   font-size: 60px;
   margin-top: 50px;
+  text-shadow: 2px 2px #4d2600;
 }
 
 .formEmail {
   padding: 100px;
+  padding-top: 30px;
 }
 
 .registerPage {
@@ -134,6 +138,8 @@ border-radius: 5px;
   background-image: url("/images/register_dog.jpg");
   background-size: auto 100%;
   background-repeat: no-repeat;
+  border-radius: 15px;
+  margin-top: 25px;
 }
 
 /*.registerWell {
@@ -147,24 +153,29 @@ border-radius: 5px;
 
 #registerHead {
   margin-left: 160px;
-  font-size: 60px;
+  font-size: 63px;
   margin-top: 50px;
+  text-shadow: 2px 2px #4d2600;
 }
 
 #homeTitle {
   text-align: center;
   color: white;
-  padding-top: 85px;
+  padding-top: 24px;
   font-size: 80px;
+  text-shadow: 2px 2px #4d2600;
 }
 
 #welcomeDetail {
   color: white;
   text-align: center;
-  margin-top: 130px;
-  font-size: 15px;
+  font-size: 17px;
   margin-left: 30px;
   margin-right: 30px;
+  margin-top: 189px;
+  padding-left: 10px;
+  padding-right: 10px;
+
 }
 
 #addressinfo {
@@ -222,6 +233,10 @@ border-radius: 5px;
 }
 
 .golden {
+  float: right;
+}
+
+.reviewdog {
   float: right;
 }
 
@@ -339,9 +354,22 @@ border-radius: 5px;
   color: #804000;
 }
 
+#openwords {
+  font-size: 24px;
+}
 
-
-
+.thumbnail {
+  display: block;
+  padding-top: 31px;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  transition: border .2s ease-in-out;
+  margin-left: -243px;
+  margin-right: -153px;
+}
 
 
 
